# video-frame-preprocess

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: artifact-contract.md  design-notes.md  integration-with-frame-timing-skill.md  usage.md
src/video_frame_preprocess/: __init__.py  batch.py  cli.py  demo.py  health.py  models.py  pipeline.py  quality.py  quality_filter.py  reporting.py  selection.py  video_io.py
src/video_frame_preprocess/config/: default.json
tests/: test_batch_pipeline.py  test_demo.py  test_health.py  test_package_metadata.py  test_quality_filter.py
